--- a/View/AdminView/EditRecipeIngredientsPageView.xaml
+++ b/View/AdminView/EditRecipeIngredientsPageView.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+<uranium:UraniumContentPage
     x:Class="MAUIRecipeApp.View.AdminView.EditRecipeIngredientsPageView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -7,6 +7,7 @@
     xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:uranium="http://schemas.enisn-projects.io/dotnet/maui/uraniumui"
     xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.AdminViewModel"
     x:Name="PageRef"
     Title="Edit Recipe Ingredient"
@@ -63,6 +64,19 @@
                                 Size="20" />
                         </Button.ImageSource>
                     </Button>
+                    <Button
+                        Background="{StaticResource Primary500}"
+                        Command="{Binding ToggleBackdropCommand}"
+                        FontAttributes="Bold"
+                        TextColor="{StaticResource WhiteText}"
+                        ToolTipProperties.Text="Filter">
+                        <Button.ImageSource>
+                            <FontImageSource
+                                FontFamily="MaterialSharp"
+                                Glyph="{x:Static m:MaterialSharp.Filter_alt}"
+                                Size="20" />
+                        </Button.ImageSource>
+                    </Button>
                 </HorizontalStackLayout>
                 <material:TextField
                     Title="Search..."
@@ -75,17 +89,72 @@
                 </material:TextField>
             </Grid>
 
+            <!--  ScrollView chỉ hiển thị trên Android  -->
+            <ScrollView
+                HorizontalScrollBarVisibility="Always"
+                IsEnabled="{OnPlatform Android=True,
+                                       WinUI=False}"
+                IsVisible="{OnPlatform Android=True,
+                                       WinUI=False}"
+                Orientation="Horizontal">
 
-            <material:DataGrid Margin="16,0,16,0" ItemsSource="{Binding RecipeIngredientDetailDtos}">
+                <!--  DataGrid sẽ luôn hiển thị bất kể nền tảng  -->
+                <material:DataGrid Margin="16,0,16,0" ItemsSource="{Binding RecipeIngredientDetailDtos}">
 
+                    <material:DataGrid.Columns>
+                        <material:DataGridColumn
+                            Title="Recipe Name"
+                            Width="*"
+                            ValueBinding="{Binding RecipeName}" />
+
+                        <material:DataGridColumn
+                            Title="Ingredient Name"
+                            Width="*"
+                            ValueBinding="{Binding IngredientName}" />
+
+                        <material:DataGridColumn
+                            Title="Quantity"
+                            Width="*"
+                            ValueBinding="{Binding Quantity}" />
+
+                        <material:DataGridColumn Title="Actions" Width="*">
+                            <material:DataGridColumn.CellItemTemplate>
+                                <DataTemplate>
+                                    <Button
+                                        Background="PaleVioletRed"
+                                        HorizontalOptions="Center"
+                                        Text="Remove" />
+                                </DataTemplate>
+                            </material:DataGridColumn.CellItemTemplate>
+                        </material:DataGridColumn>
+
+                        <material:DataGridColumn Title="Is Deleted ?" Width="*">
+                            <material:DataGridColumn.CellItemTemplate>
+                                <DataTemplate x:DataType="dto:RecipeIngredientDetailDto">
+                                    <material:CheckBox
+                                        HorizontalOptions="Center"
+                                        IsChecked="{Binding IsDeleted}"
+                                        IsEnabled="False" />
+                                </DataTemplate>
+                            </material:DataGridColumn.CellItemTemplate>
+                        </material:DataGridColumn>
+                    </material:DataGrid.Columns>
+                </material:DataGrid>
+            </ScrollView>
+
+            <!--  Hiển thị DataGrid mà không cần ScrollView trên WinUI  -->
+            <material:DataGrid
+                x:Name="DataGridWinUI"
+                Margin="16,0,16,0"
+                IsVisible="{OnPlatform Android=False,
+                                       WinUI=True}"
+                ItemsSource="{Binding RecipeIngredientDetailDtos}">
 
                 <material:DataGrid.Columns>
-
                     <material:DataGridColumn
                         Title="Recipe Name"
                         Width="*"
                         ValueBinding="{Binding RecipeName}" />
-
 
                     <material:DataGridColumn
                         Title="Ingredient Name"
@@ -107,14 +176,17 @@
                             </DataTemplate>
                         </material:DataGridColumn.CellItemTemplate>
                     </material:DataGridColumn>
+
                     <material:DataGridColumn Title="Is Deleted ?" Width="*">
                         <material:DataGridColumn.CellItemTemplate>
                             <DataTemplate x:DataType="dto:RecipeIngredientDetailDto">
-                                <material:CheckBox HorizontalOptions="Center" IsChecked="{Binding IsDeleted}" />
+                                <material:CheckBox
+                                    HorizontalOptions="Center"
+                                    IsChecked="{Binding IsDeleted}"
+                                    IsEnabled="False" />
                             </DataTemplate>
                         </material:DataGridColumn.CellItemTemplate>
                     </material:DataGridColumn>
-
                 </material:DataGrid.Columns>
             </material:DataGrid>
 
@@ -124,4 +196,34 @@
         </VerticalStackLayout>
     </ScrollView>
 
-</ContentPage>
+    <uranium:UraniumContentPage.Attachments>
+        <material:BackdropView
+            x:Name="backdrop"
+            Title="menu"
+            BackgroundColor="{StaticResource Primary100}"
+            InsertAfterToolbarIcons="True"
+            IsPresented="{Binding IsBackdropPresented, Mode=TwoWay}">
+            <VerticalStackLayout Spacing="8">
+                <material:MultiplePickerField
+                    Title="Ingredient List"
+                    Margin="0,8,0,0"
+                    BorderColor="{StaticResource Primary400}"
+                    Icon="{FontImageSource FontFamily=MaterialSharp,
+                                           Glyph={x:Static m:MaterialSharp.Stacks},
+                                           Color={StaticResource Primary400}}"
+                    ItemsSource="{Binding IngredientNameFilter}"
+                    TitleColor="{StaticResource Primary400}" />
+
+                <Button
+                    Margin="0,0,0,8"
+                    BackgroundColor="{StaticResource Primary400}"
+                    BorderColor="{StaticResource Primary400}"
+                    HorizontalOptions="End"
+                    Text="Show All"
+                    TextColor="{StaticResource WhiteText}" />
+
+            </VerticalStackLayout>
+        </material:BackdropView>
+    </uranium:UraniumContentPage.Attachments>
+
+</uranium:UraniumContentPage>
