--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -137,17 +137,30 @@
 
     <Shell.FlyoutHeaderTemplate>
         <DataTemplate>
-            <Grid BackgroundColor="Black" HeightRequest="200">
+            <Grid BackgroundColor="{StaticResource WhiteText}" HeightRequest="200">
                 <Image
                     Aspect="AspectFill"
                     Opacity="0.6"
-                    Source="store.jpg" />
-                <Label
+                    Source="food_background_img.png" />
+                <Frame
+                    BackgroundColor="White"
+                    BorderColor="Gray"
+                    CornerRadius="100"
+                    HeightRequest="125"
+                    HorizontalOptions="Center"
+                    IsClippedToBounds="True"
+                    WidthRequest="125">
+                    <Image
+                        Aspect="Fill"
+                        Scale="1.5"
+                        Source="logo.png" />
+                </Frame>
+                <!--<Label
                     FontAttributes="Bold"
                     HorizontalTextAlignment="Center"
                     Text="InsertLogoHere"
                     TextColor="White"
-                    VerticalTextAlignment="Center" />
+                    VerticalTextAlignment="Center" />-->
             </Grid>
         </DataTemplate>
     </Shell.FlyoutHeaderTemplate>
@@ -158,7 +171,7 @@
                 <Label
                     FontAttributes="Bold"
                     HorizontalOptions="Center"
-                    Text="RecipeApp"
+                    Text="Kitchen Verse"
                     TextColor="GhostWhite" />
                 <Label
                     HorizontalOptions="Center"
