Refactor AuthService to use Firestore; update user handling
Refactor AuthService to use Firestore for user authentication:
- Add Firestore dependencies and initialize in constructor.
- Implement singleton pattern for AuthService.
- Modify Login method to fetch user data from Firestore and verify password using new PasswordHasherService.
- Comment out AddOrUpdateUserAsync method.

Correct DataGrid binding in EditUserSavedRecipePageView.xaml.

Update LoginPageViewModel to:
- Use AuthService.Instance.Login for authentication.
- Set current user with UserService.Instance.SetCurrentUser.
- Navigate based on user's admin status.
- Log error message on login failure.

Add PasswordHasherService for password hashing and verification.

Introduce UserService to manage current user's state:
- Implement singleton pattern for UserService.
- Add methods to set and clear current user.

--- a/View/AdminView/EditUserSavedRecipePageView.xaml
+++ b/View/AdminView/EditUserSavedRecipePageView.xaml
@@ -77,7 +77,7 @@
 
 
 
-            <material:DataGrid Margin="16,0,16,0" ItemsSource="{Binding UserSavedRecipesqr}">
+            <material:DataGrid Margin="16,0,16,0" ItemsSource="{Binding UserSavedRecipes}">
 
 
                 <material:DataGrid.Columns>
