--- a/View/UserView/HomePageView.xaml
+++ b/View/UserView/HomePageView.xaml
@@ -12,71 +12,72 @@
     Title=""
     x:DataType="viewmodel:HomePageViewModel"
     Background="{StaticResource WhiteText}">
-    <ScrollView>
-        <VerticalStackLayout
+    <AbsoluteLayout>
+        <ScrollView>
+            <VerticalStackLayout
             Margin="16,16,16,0"
             HorizontalOptions="{OnPlatform Android=Fill,
                                            WinUI=Center}"
             Spacing="16">
 
 
-            <VerticalStackLayout HorizontalOptions="Start" Spacing="4">
-                <Label
+                <VerticalStackLayout HorizontalOptions="Start" Spacing="4">
+                    <Label
                     FontSize="18"
                     Text="Good Morning!"
                     TextColor="{StaticResource PrimaryDarkText}" />
-                <Label
+                    <Label
                     FontAttributes="Bold"
                     FontSize="22"
                     Text="TEKATOJI"
                     TextColor="{StaticResource Primary}" />
-            </VerticalStackLayout>
+                </VerticalStackLayout>
 
 
-            <VerticalStackLayout Spacing="8">
-                <Label
+                <VerticalStackLayout Spacing="8">
+                    <Label
                     FontAttributes="Bold"
                     FontSize="20"
                     Text="Featured Food"
                     TextColor="{StaticResource PrimaryDarkText}" />
-                <ScrollView Orientation="Horizontal">
-                    <HorizontalStackLayout Spacing="8">
-                        <Button
+                    <ScrollView Orientation="Horizontal">
+                        <HorizontalStackLayout Spacing="8">
+                            <Button
                             BackgroundColor="{StaticResource Primary}"
                             HeightRequest="150"
                             WidthRequest="200" />
-                        <Button
+                            <Button
                             BackgroundColor="{StaticResource Primary}"
                             HeightRequest="150"
                             WidthRequest="200" />
-                        <Button
+                            <Button
                             BackgroundColor="{StaticResource Primary}"
                             HeightRequest="150"
                             WidthRequest="200" />
-                        <Button
+                            <Button
                             BackgroundColor="{StaticResource Primary}"
                             HeightRequest="150"
                             WidthRequest="200" />
-                    </HorizontalStackLayout>
-                </ScrollView>
+                        </HorizontalStackLayout>
+                    </ScrollView>
 
-            </VerticalStackLayout>
+                </VerticalStackLayout>
 
-            <!--  Food Types  -->
-            <VerticalStackLayout Spacing="8">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Label
+                <!--  Food Types  -->
+                <VerticalStackLayout Spacing="8">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Label
                         Grid.Column="0"
                         FontAttributes="Bold"
                         FontSize="20"
                         Text="Category"
                         TextColor="{StaticResource PrimaryDarkText}"
                         VerticalTextAlignment="Center" />
-                    <Button
+                        <Button
                         Grid.Column="1"
                         BackgroundColor="Transparent"
                         CornerRadius="0"
@@ -86,13 +87,13 @@
                         HorizontalOptions="End"
                         Text="See All"
                         TextColor="{StaticResource Primary}" />
-                </Grid>
+                    </Grid>
 
-                <ScrollView Orientation="Horizontal">
-                    <CollectionView ItemsLayout="HorizontalList" ItemsSource="{Binding FoodRecipeTypes}">
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate x:DataType="models:FoodRecipeType">
-                                <Button
+                    <ScrollView Orientation="Horizontal">
+                        <CollectionView ItemsLayout="HorizontalList" ItemsSource="{Binding FoodRecipeTypes}">
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate x:DataType="models:FoodRecipeType">
+                                    <Button
                                     Margin="0,0,8,0"
                                     BackgroundColor="Transparent"
                                     BorderColor="{StaticResource Primary}"
@@ -100,29 +101,29 @@
                                     Text="{Binding FoodTypeName}"
                                     TextColor="{StaticResource PrimaryDarkText}"
                                     WidthRequest="130" />
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
 
-                </ScrollView>
-            </VerticalStackLayout>
+                    </ScrollView>
+                </VerticalStackLayout>
 
 
 
-            <VerticalStackLayout Spacing="8">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Label
+                <VerticalStackLayout Spacing="8">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Label
                         Grid.Column="0"
                         FontAttributes="Bold"
                         FontSize="20"
                         Text="Recipes"
                         TextColor="{StaticResource PrimaryDarkText}"
                         VerticalTextAlignment="Center" />
-                    <Button
+                        <Button
                         Grid.Column="1"
                         BackgroundColor="Transparent"
                         CornerRadius="0"
@@ -132,19 +133,19 @@
                         HorizontalOptions="End"
                         Text="See All"
                         TextColor="{StaticResource Primary}" />
-                </Grid>
+                    </Grid>
 
-                <CollectionView ItemsLayout="VerticalGrid,2 " ItemsSource="{Binding FoodRecipes}">
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate x:DataType="models:FoodRecipe">
-                            <Grid Padding="8">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="100" />
-                                    <RowDefinition Height="75" />
-                                </Grid.RowDefinitions>
+                    <CollectionView ItemsLayout="VerticalGrid,2 " ItemsSource="{Binding FoodRecipes}">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate x:DataType="models:FoodRecipe">
+                                <Grid Padding="8">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="100" />
+                                        <RowDefinition Height="75" />
+                                    </Grid.RowDefinitions>
 
 
-                                <ImageButton
+                                    <ImageButton
                                     Grid.Row="0"
                                     Aspect="Fill"
                                     Command="{Binding Path=FoodDetailCommand, Source={RelativeSource AncestorType={x:Type viewmodel:HomePageViewModel}}}"
@@ -152,7 +153,7 @@
                                     CornerRadius="20"
                                     Source="{Binding ImgUrl}" />
 
-                                <!--<Border Stroke="Transparent" StrokeShape="RoundRectangle 15">
+                                    <!--<Border Stroke="Transparent" StrokeShape="RoundRectangle 15">
                                     <Image
                                         Grid.Row="0"
                                         Aspect="Fill"
@@ -160,42 +161,55 @@
                                 </Border>-->
 
 
-                                <VerticalStackLayout
+                                    <VerticalStackLayout
                                     Grid.Row="1"
                                     Margin="8,8,0,0"
                                     Spacing="8">
-                                    <Label
+                                        <Label
                                         FontSize="18"
                                         Text="{Binding RecipeName}"
                                         TextColor="{StaticResource PrimaryDarkText}" />
-                                    <HorizontalStackLayout Spacing="8">
-                                        <Label Text="{Binding Calories, StringFormat='{0} cals'}" TextColor="{StaticResource Gray300}" />
-                                        <Image>
-                                            <Image.Source>
-                                                <FontImageSource
+                                        <HorizontalStackLayout Spacing="8">
+                                            <Label Text="{Binding Calories, StringFormat='{0} cals'}" TextColor="{StaticResource Gray300}" />
+                                            <Image>
+                                                <Image.Source>
+                                                    <FontImageSource
                                                     FontFamily="MaterialSharp"
                                                     Glyph="{x:Static m:MaterialSharp.Circle}"
                                                     Size="15"
                                                     Color="{StaticResource Gray300}" />
-                                            </Image.Source>
-                                        </Image>
-                                        <Label Text="{Binding CookingTime, StringFormat='{0} mins'}" TextColor="{StaticResource Gray300}" />
-                                    </HorizontalStackLayout>
-                                </VerticalStackLayout>
-                            </Grid>
+                                                </Image.Source>
+                                            </Image>
+                                            <Label Text="{Binding CookingTime, StringFormat='{0} mins'}" TextColor="{StaticResource Gray300}" />
+                                        </HorizontalStackLayout>
+                                    </VerticalStackLayout>
+                                </Grid>
 
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-
-
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
 
 
-                <VerticalStackLayout />
 
+
+                    <VerticalStackLayout />
+
+
+                </VerticalStackLayout>
 
             </VerticalStackLayout>
-
-        </VerticalStackLayout>
-    </ScrollView>
+            
+        </ScrollView>
+        <Button
+            Text="+"
+            CornerRadius="30"
+            BackgroundColor="{StaticResource Primary}"
+            TextColor="White"
+            WidthRequest="60"
+            HeightRequest="60"
+            FontAttributes="Bold"
+            AbsoluteLayout.LayoutFlags="PositionProportional"
+            AbsoluteLayout.LayoutBounds="1,1,AutoSize,AutoSize"
+            Clicked="OnSubmitNewRecipeClicked"/>
+    </AbsoluteLayout>
 </ContentPage>
